  compiled without support for MySQL yet with support for another DBMS.
* (bug 56199) Raw option of parser functions must now match complete word,
  to take effect.
* (bug 60543) Special:PrefixIndex forgot stripprefix=1 for "Next page" link
* (bug 29762) Undoing an already-undone edit will now display an appropriate
  message instead of leading the user to make a null edit.

=== Web API changes in 1.23 ===
* (bug 54884) action=parse&prop=categories now indicates hidden and missing
  categories.
* action=query&meta=filerepoinfo now returns additional information for each
  repo.
* action=parse&prop=languageshtml was deprecated in 1.18 and will be removed in
  MediaWiki 1.24.
* action=parse now has disabletoc flag to disable table of contents in output.
* (bug 25702) list=allcategories, list=allimages, list=alllinks, list=allpages,
  list=deletedrevs and list=filearchive did not handle case-sensitivity
  properly for all parameters.
* ApiQueryBase::titlePartToKey allows an extra parameter that indicates the
  namespace in order to properly capitalize the title part.
* (bug 57874) action=feedcontributions no longer has one item more than limit.
* All API modules now support an assert parameter. See the new features section
  for more details.
* Added prop=contributors to fetch the list of contributors to the page.
* The following API modules will now return entries where fields have been
  revision-deleted: list=deletedrevs, list=filearchive, list=recentchanges,
  list=watchlist. "hidden" indicators will be included, in the same style as is
  already done for prop=revisions.
* The following API modules will now return the content of revision-deleted
  fields, in addition to the "hidden" indicators, if the querying user has the
  necessary rights: list=logevents, list=usercontribs, prop=imageinfo,
  prop=revisions.
* The above modules, where applicable, will now return entries filtered by
  revision-deleted fields if the querying user has the necessary rights. For